# E-Queue-HPC

./: .gitignore  README.md  __init__.py  environment.yml  pyproject.toml  setup.py
example/: 01_create_job_queue.py  02_launch_workers.py  run_jobs.py
jobqueue/: __init__.py  connect.py  connection_handle.py  connection_manager.py  connections.py  cursor_manager.py  functions.py  job.py  job_queue.py  job_status.py  main.py  message.py
notebooks/: example.ipynb
src/: __init__.py  connection_manager.py  job_queue.py
src/jobqueue/: job.py
test/: job_queue_test.py  test_functions.py  test_interface.py
